Fix dropdown on mobile, remove correlativas button

--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,12 @@
   text-align: center;
 }
 
-.dropdown .dropdown-menu{
-  display: none;
-}
-.dropdown:hover > .dropdown-menu, .dropend:hover > .dropdown-menu{
+.dropend:hover > .dropdown-menu{
   display: block;
   margin-top: .125em;
   margin-left: .125em;
 }
+
 @media screen and (min-width:992px) {
   .dropend:hover > .dropdown-menu{
     position: absolute;
@@ -18,6 +16,31 @@
   }
   .dropend .dropdown-toggle{
     margin-left: .5em;
+  }
+}
+
+.horarios-dropdown {
+  display: none;
+}
+@media (max-width: 992px) {
+  .horarios-dropdown {
+    display: block;
+  }
+  .horarios-item {
+    display: none;
+  }
+}
+
+.dropdown-perfil {
+  left: 0;
+  right: auto;
+  transform: none;
+}
+@media (max-width: 992px) {
+  .dropdown-perfil {
+    left: 50% !important;
+    transform: translateX(-50%) !important;
+    right: auto !important;
   }
 }
 
@@ -36,19 +59,6 @@
   }
 }
 
-.dropdown-menu {
-  left: 0;
-  right: auto;
-  transform: none;
-}
-
-@media (max-width: 767.98px) {
-  .dropdown-menu {
-    left: 50% !important;
-    transform: translateX(-50%) !important;
-    right: auto !important;
-  }
-}
 
 .columnas-grid {
   display: grid;
